# muontickets

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  MuonTickets_Project_Objective.md  PARITY_REPORT.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.9.0.md  VERSIONING.md  humans.txt  install.sh  mt.py  porting.md  porting_phase1.md  pyproject.toml  skills.md
.github/workflows/: c-release.yml  combined-release.yml  parity.yml  platform-release.yml  rust-release.yml  zig-release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  MuonTickets_Project_Objective.md  PARITY_REPORT.md  README.md  RELEASE_NOTES_v0.9.0.md  VERSIONING.md  maintenance_tools_setup.md  muonium_autonomous_maintenance_rules.md  muontickets_tla_analysis.md
example_fixes/: DELIVERY_REPORT.md  FINAL_SUMMARY.txt  INDEX.md  START_HERE.md  SUMMARY.md
example_fixes/android_nav/: FIXES_DOCUMENTATION.md  IMPLEMENTATION_CHECKLIST.md  MainActivity.kt  NavGraphs.kt  NavigationTests.kt  QUICK_REFERENCE.md  README.md  Route.kt  ScreenImplementations.kt
muontickets/: Makefile.snippet  agents.snippet  mt.py  schema.json  ticket.template
muontickets/hooks/: pre-commit
ports/: Makefile  porting.md
tests/: test_archive_guidance.py  test_concurrent_writers.py  test_conformance_runner.py  test_datetime_utc.py  test_dependency_cycles.py  test_duplicate_ids.py  test_fail_task_owner_guard.py  test_filename_id_match.py  test_maintain.py  test_queue_allocation.py  test_set_status_invariants.py  test_versioning.py  test_wip_limit_claim.py
tickets/: T-000076.md  T-000077.md  last_ticket_id
tools/: USAGE.md
(+42 files in other folders)
